--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
   </head>
   <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-02df"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
     <audio controls autoplay hidden>
-      <source src="music/Backsound Romantis No Copyright Aakash Gandhi - Arms Of Heaven.mp3">
+      <source src="Backsound Romantis No Copyright Aakash Gandhi - Arms Of Heaven.mp3">
     </audio>    
     <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -101,7 +101,7 @@
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-30 u-size-xs-60 u-layout-cell-2" src="">
                 <div class="u-container-layout u-valign-middle u-container-layout-2" src="">
-                  <img class="u-image u-image-1" src="images/emoticon-sad-png-8.webp" data-image-width="480" data-image-height="480">
+                  <img class="u-image u-image-1" src="emoticon-sad-png-8.webp" data-image-width="480" data-image-height="480">
                 </div>
               </div>
             </div>
@@ -152,7 +152,7 @@
                 <div class="u-container-layout u-container-layout-1">
                   <h2 class="u-align-center u-text u-text-default u-text-1">Udah Ya Jangan Kayak Gini</h2>
                   <p class="u-align-center u-text u-text-2">Tadi Katanya Nunggu renal biar tidur bareng</p>
-                  <img class="u-image u-image-circle u-preserve-proportions u-image-1" src="images/emoticon-sad-png-8.webp" alt="" data-image-width="480" data-image-height="480">
+                  <img class="u-image u-image-circle u-preserve-proportions u-image-1" src="emoticon-sad-png-8.webp" alt="" data-image-width="480" data-image-height="480">
                   <a href="#maaf" class="u-btn u-btn-round u-button-style u-radius-50 u-btn-1">learn more</a>
                 </div>
               </div>
