--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
   </head>
   <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-02df"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
     <audio controls autoplay hidden>
-      <source src="\Backsound Romantis No Copyright Aakash Gandhi - Arms Of Heaven.mp3">
+      <source src="Backsound Romantis No Copyright Aakash Gandhi - Arms Of Heaven.mp3">
     </audio>    
     <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
